Updated the db.
