# server/src/controllers/fareDetailsController.ts
@@ -104,9 +104,7 @@ export const createFareDetail = async (
         name,
         fare_amount,
         timeslots,
-        timed_pass_duration,
-        is_fixed_days,
-        is_monthly,
+        duration,
         alternate_fare_detail_id,
     } = request.body;
 
@@ -135,7 +133,7 @@ export const createFareDetail = async (
                 commute_system_id,
                 name,
                 fare_amount,
-                timed_pass_duration,
+                duration,
                 alternate_fare_detail_id,
             ],
         );
@@ -169,7 +167,7 @@ export const createFareDetail = async (
             name: fareDetails[0].fare_type,
             fare_amount: parseFloat(fareDetails[0].fare_amount),
             timeslots: allTimeslots,
-            timed_pass_duration: fareDetails[0].timed_pass_duration,
+            duration: fareDetails[0].duration,
             alternate_fare_detail_id: fareDetails[0].alternate_fare_detail_id,
             date_created: fareDetails[0].date_created,
             date_modified: fareDetails[0].date_modified,
@@ -265,7 +263,7 @@ export const updateFareDetail = async (
         name,
         fare_amount,
         timeslots,
-        timed_pass_duration,
+        duration,
         is_fixed_days,
         is_monthly,
         alternate_fare_detail_id,
@@ -310,7 +308,7 @@ export const updateFareDetail = async (
             commute_system_id,
             name,
             fare_amount,
-            timed_pass_duration,
+            duration,
             alternate_fare_detail_id,
             id,
         ]);
@@ -329,7 +327,7 @@ export const updateFareDetail = async (
             name: fareDetails[0].fare_type,
             fare_amount: parseFloat(fareDetails[0].fare_amount),
             timeslots: timeslots,
-            timed_pass_duration: fareDetails[0].timed_pass_duration,
+            duration: fareDetails[0].duration,
             alternate_fare_detail_id: fareDetails[0].alternate_fare_detail_id,
             date_created: fareDetails[0].date_created,
             date_modified: fareDetails[0].date_modified,
